# Poset

./: .gitignore  CMakeLists.txt  README.md
docs/: notes.txt
makefile/: Makefile
src/: poset.cc  poset.h  transitive.cc
